<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/food_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:elevation="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imageViewFoodBasket"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/your_food_in_basket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewFoodNameBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/food_name"
                android:textSize="18sp"
                android:textColor="@color/secondary_dark"
                app:layout_constraintStart_toEndOf="@+id/imageViewFoodBasket"
                app:layout_constraintTop_toTopOf="@+id/imageViewFoodBasket" />

            <TextView
                android:id="@+id/textViewFoodPriceBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_price"
                android:textColor="@color/primary_dark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewFoodBasket"
                app:layout_constraintStart_toStartOf="@+id/textViewFoodNameBasket" />


            <TextView
                android:id="@+id/tVAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_amount"
                android:textColor="@color/secondary_light"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewFoodNameBasket"
                app:layout_constraintStart_toEndOf="@+id/textViewFoodNameBasket"
                app:layout_constraintTop_toTopOf="@+id/textViewFoodNameBasket" />

            <ImageView
                android:id="@+id/imageViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/delete_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_delete" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>